# findent-pypi

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  SECURITY.md  pyproject.toml  setup-wheel.py  setup.py  version.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
doc/: README.md
