[build-system]
requires = ["setuptools>=42", "scikit-build>=0.13", "cmake>=3.18", "ninja"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
before-all = "yum -y install bison flex || apt-get -y install bison flex || apk add --upgrade bison flex"
test-command = "echo 'installed'"

[tool.cibuildwheel.macos]
before-all = "brew install bison flex make"
test-command = "echo 'installed'"
