[build-system]
requires = ["setuptools>=42", "scikit-build>=0.13", "cmake>=3.18", "ninja"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp311-*" # build wheels only for one Python version

[tool.cibuildwheel.linux]
before-all = "yum -y install bison flex || apt-get -y install bison flex || apk add --upgrade bison flex"
test-command = "echo 'installed'"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install bison flex make"
test-command = "echo 'installed'"

[tool.cibuildwheel.macos.environment]
CC = "clang"
CXX = "clang++"

[tool.cibuildwheel.windows]
archs = ["auto64"]

[tool.cibuildwheel.windows.environment]
CC = "gcc.exe"
CXX = "g++.exe"
